# research-lens

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
docs/: evaluation.md  portfolio-summary.md
src/research_lens/: __init__.py  agent.py  analytics.py  baseline.py  cli.py  config.py  dashboard.py  database.py  evaluation.py  normalization.py  ollama.py  openalex.py  query_service.py  repository.py  schema.py  sql_safety.py
tests/: test_agent.py  test_analytics.py  test_baseline.py  test_dashboard.py  test_evaluation.py  test_normalization.py  test_ollama.py  test_query_service.py  test_repository.py  test_sql_safety.py  test_streamlit_app.py
