[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "research-lens"
version = "0.1.0"
description = "A local-first research intelligence SQL agent powered by OpenAlex and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4,<2",
  "httpx>=0.28,<1",
  "langchain>=1,<2",
  "langchain-community>=0.4,<1",
  "langchain-ollama>=1,<2",
  "python-dotenv>=1,<2",
  "sqlglot>=27,<29",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[project.scripts]
research-lens = "research_lens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
